Updated routes to better conform to REST practices
